Fix chapter 1 and 2

--- a/Security/1-Introduction.tex
+++ b/Security/1-Introduction.tex
@@ -2,9 +2,11 @@
 
 \section{Securing network}
 
-\subsection{Introduction}
+\subsection{Terminologies}
 
 An attack vector is a path or other means by which an attacker can gain access to a server, host, or network. Attack vectors can originate from outside (external threat) or inside (internal threat) the corporate network. Internal threats have the potential to cause greater damage than external threats because employees have direct access to infrastructure devices as well as the knowledge of the corporate network.\\
+
+\textbf{White hat hackers} perform \emph{ethical} network penetration test to discover network vulnerabilities. \textbf{Grey hat hackers} do unethical things, but not for personal gain or to cause damage (e.g. disclose vulnerability publicly). \textbf{Black hat hackers} violate computer and network security for personal gain and malicious purposes. The following list displays modern hacking terms and a brief description of each.\\
 
 \textbf{Security Artichoke} is the analogy used to describe what a hacker must do to launch an attack in a Borderless network. They  remove certain \emph{artichoke leafs}, and each \emph{leaf} of the network may reveal some sensitive data. And leaf after leaf, it all leads the hacker to more data.\\
 
@@ -42,7 +44,7 @@ A \textbf{Security Policy} is a formal statement of the rules by which people th
 \paragraph{Data center network:} Data center networks are interconnected to corporate sites using VPN and ASA devices along with \emph{integrated data center switches}, such as a high-speed Nexus switches. Data center physical security can be divided into two areas: Outside perimeter security and Inside perimeter security. 
 %\emph{Security traps} (Inside perimeter security) provide access to the data halls where data center data is stored. A person must first enter the security trap using their badge ID proximity card. After the person is inside the security trap, biometric verifications are used to open the second door. The user must repeat the process to exit the data hall.
 
-\paragraph{Cloud and virtual network:} This kind of network uses virtual machines (VM) to provide services to their clients.  VMs are also prone to specific targeted attacks as shown in the following list. The Cisco Secure Data Center is a solution to secure Cloud and virtual network. The core components of this solution provide: Secure Segmentation, Threat Defense, and Visibility.
+\paragraph{Cloud and virtual network:} This kind of network uses virtual machines (VM) to provide services to their clients.  VMs are also prone to specific targeted attacks as shown in the following list. The \textbf{Cisco Secure Data Center} is a solution to secure Cloud and virtual network. The core components of this solution provide: Secure Segmentation, Threat Defense, and Visibility.
 
 \begin{itemize}
 \item \textbf{Hyperjacking:} An attacker could hijack a VM hypervisor and use it as a starting point to attack other devices.
@@ -50,29 +52,26 @@ A \textbf{Security Policy} is a formal statement of the rules by which people th
 \item \textbf{Antivirus storm:} Multiple VMs attempt to download antivirus file at the same time
 \end{itemize}
 
-\paragraph{Borderless Network:} To accommodate the BYOD trend, Cisco developed the Borderless Network. To support this network, Cisco devices support Mobile Device Management (MDM) features. MDM features secure, monitor, and manage mobile devices, including corporate-owned devices and employee-owned devices. Some critical MDM functions include:
-
-\begin{itemize}
-\item Data encryption
-\item PIN enforcement
-\item Data wipe (data in lost devices can be remotely wiped out)
-\item Data Loss Prevention (DLP): prevent unauthorized users from accessing, prevent authorized users from doing malicious things to  critical data  
-\item Detect password bypasses such as Jalibreaking (Apple iOS) or Rooting (Android) and restrict devices' access to network and corporate assets
-\end{itemize}
+\paragraph{Borderless Network:} To accommodate the BYOD trend, Cisco developed the Borderless Network. To support this network, Cisco devices support Mobile Device Management (MDM) features. MDM features secure, monitor, and manage mobile devices, including corporate-owned devices and employee-owned devices. 
+%Some critical MDM functions include:
+%
+%\begin{itemize}
+%\item Data encryption
+%\item PIN enforcement
+%\item Data wipe (data in lost devices can be remotely wiped out)
+%\item Data Loss Prevention (DLP): prevent unauthorized users from accessing, prevent authorized users from doing malicious things to  critical data  
+%\item Detect password bypasses such as Jalibreaking (Apple iOS) or Rooting (Android) and restrict devices' access to network and corporate assets
+%\end{itemize}
 
 \section{Network threats}
 
-\subsection{Who is a hacker?}
-
-\textbf{White hat hackers} perform \emph{ethical} network penetration test to discover network vulnerabilities. \textbf{Grey hat hackers} do unethical things, but not for personal gain or to cause damage (e.g. disclose vulnerability publicly). \textbf{Black hat hackers} violate computer and network security for personal gain and malicious purposes. The following list displays modern hacking terms and a brief description of each.\\
-
-\begin{itemize}
-\item Script kiddies -- inexperienced hackers running scripts, tools, programs, etc. to cause harm but not for profit
-\item Vulnerability broker -- white hat hackers discover exploits for reward
-\item Hacktivists -- protest against political or social ideas by leaking sensitive information
-\item Cyber criminals -- black hat hackers
-\item State-sponsored -- either white hat or black hat hacker, who steals government secrets, sabotage network, and intelligence; their targets are foreign government, terrorist group, and corporations
-\end{itemize}
+%\begin{itemize}
+%\item Script kiddies -- inexperienced hackers running scripts, tools, programs, etc. to cause harm but not for profit
+%\item Vulnerability broker -- white hat hackers discover exploits for reward
+%\item Hacktivists -- protest against political or social ideas by leaking sensitive information
+%\item Cyber criminals -- black hat hackers
+%\item State-sponsored -- either white hat or black hat hacker, who steals government secrets, sabotage network, and intelligence; their targets are foreign government, terrorist group, and corporations
+%\end{itemize}
 
 %\subsection{Hacker tools}
 %
@@ -106,11 +105,11 @@ A \textbf{Security Policy} is a formal statement of the rules by which people th
 
 \subsection{Malware}
 
-A \textbf{virus} is malicious code that is attached to executable files which are often legitimate programs. Most viruses require end user \emph{activation}. A simple virus may install itself at the first line of code on an executable file. When activated, the virus might check the disk for other executables so that it can infect all the files it has not yet infected. Most viruses are now \emph{spread} by USB memory drives, CDs, DVDs, network shares, and email. Email viruses are now the most common type of virus.\\
+A \textbf{virus} is malicious code that is attached to executable files which are often legitimate programs. A virus is triggered by an event. When activated, the virus can infect all the files it has not yet infected, but does not automatically propagate itself to other systems. Viruses are \emph{spread} by USB memory drives, CDs, DVDs, network shares, and email. Email viruses are now the most common type of virus.\\
 
 A \textbf{Trojan horse} is malware that carries out malicious operations under the guise of a desired function. A Trojan horse comes with malicious code hidden inside of it. This malicious code exploits the \emph{privileges} of the user that \emph{runs} it. Trojans are often found attached to online games. \\
 
-\textbf{Worms} \emph{run by themselves}, \emph{replicate} and then \emph{spread very quickly} to slow down networks. They does not require user participation. After a host is infected, the worm is able to  over the network. Most worm attacks consist of three components:
+\textbf{Worms} run by themselves, replicate and then spread very quickly (self-propagation) to slow down networks. They does not require user participation. After a host is infected, the worm is able to  over the network. Most worm attacks consist of three components:
 
 \begin{itemize}
 \item \textbf{Enabling vulnerability:} A worm installs itself using an exploit mechanism, such as an email attachment, an executable file, or a Trojan horse.
@@ -135,22 +134,31 @@ Some other examples of modern malware:
 
 The method used in this course classifies attacks in three major categories: Reconnaissance, Access, and DoS Attacks.\\
 
-\textbf{Reconnaissance} is known as information gathering. Hackers use reconnaissance (or recon) attacks to do unauthorized discovery and mapping of systems, services, or vulnerabilities. Some examples of reconnaissance attacks:  information query, ping sweep,  port scan,  Vulnerability Scanners,  Exploitation tools.\\
+\textbf{Reconnaissance attacks} gather information about a network and scan for access. Some examples of reconnaissance attacks:  information query, ping sweep\footnote{a network scanning technique that indicates the live hosts in a range of IP addresses},  port scan,  Vulnerability Scanners,  Exploitation tools.\\
 
-\textbf{Access} attacks exploit known vulnerabilities in authentication services, FTP services, and web services to gain entry to  sensitive information. There are five common types of access attacks: Password attack, Trust exploitation, Port redirection, Man-in-the-middle, Buffer overflow, IP, MAC, DHCP Spoofing.\\
-
-\textbf{Social engineering} is an \textbf{access attack} that attempts to manipulate individuals into performing actions or divulging confidential information. Specific types of social engineering attacks include:
+\textbf{Access attacks} exploit network vulnerabilities to gain access or control to sensitive information. There are five common types of access attacks: Password attack, Trust exploitation, Port redirection, Man-in-the-middle, Buffer overflow, IP spoofing, MAC spoofing, DHCP Spoofing.\\
 
 \begin{itemize}
-\item Pretexting -- a hacker calls an individual and lies to them in an attempt to gain access to privileged data
-\item Phishing -- a malicious party sends a fraudulent email disguised as being from a legitimate, trusted source. The message intends to trick the recipient into installing malware on their device, or into sharing personal or financial information.
-\item Spam -- use spam email to trick a user to click an infected link or download an infected file.
-\item Tailgating -- This is when a hacker quickly follows an authorized person into a secure location. The hacker then has access to a secure area.
-\item Something for Something (Quid pro quo) -- a hacker requests personal information from a party in exchange for something like a free gift.
-\item Baiting -- a hacker leaves a malware-infected physical device, such as a USB flash drive in a public location such as a corporate washroom. The finder finds the device and loads it onto their computer, unintentionally installing the malware.
+\item Password attack -- a dictionary is used for repeated login attempts
+\item Trust exploitation -- uses granted privileges to access unauthorized material
+\item Port redirection -- uses a compromised internal host to pass traffic through a firewall
+\item Man-in-the-middle -- an unauthorized device positioned between two legitimate devices in order to redirect or capture traffic
+\item Buffer overflow -- too much data sent to a buffer memory
 \end{itemize}
 
-\textbf{Denial-of-Service (DoS)} attacks create interruption of service. They are popular and simple to conduct. There are two major sources of DoS attacks:
+%\textbf{Social engineering} is an \textbf{access attack} that attempts to manipulate individuals into performing actions or divulging confidential information. 
+%Specific types of social engineering attacks include:
+%
+%\begin{itemize}
+%\item Pretexting -- a hacker calls an individual and lies to them in an attempt to gain access to privileged data
+%\item Phishing -- a malicious party sends a fraudulent email disguised as being from a legitimate, trusted source. The message intends to trick the recipient into installing malware on their device, or into sharing personal or financial information.
+%\item Spam -- use spam email to trick a user to click an infected link or download an infected file.
+%\item Tailgating -- This is when a hacker quickly follows an authorized person into a secure location. The hacker then has access to a secure area.
+%\item Something for Something (Quid pro quo) -- a hacker requests personal information from a party in exchange for something like a free gift.
+%\item Baiting -- a hacker leaves a malware-infected physical device, such as a USB flash drive in a public location such as a corporate washroom. The finder finds the device and loads it onto their computer, unintentionally installing the malware.
+%\end{itemize}
+
+\textbf{Denial-of-Service (DoS) attacks} prevent users from accessing a system. They are popular and simple to conduct. There are two major sources of DoS attacks:
 
 \begin{itemize}
 \item \emph{Maliciously Formatted Packets} is forwarded to a host and the receiver is unable to handle an unexpected condition, which leads to slow or crashed system.
@@ -167,27 +175,11 @@ The method used in this course classifies attacks in three major categories: Rec
 
 \section{Mitigating Threats}
 
-\subsection{Cisco SecureX architecture}
-
-The Cisco SecureX architecture is designed to provide effective security for any user, using any device, from any location, and at any time. This architecture includes the following five major components:
-
-\begin{itemize}
-\item \textbf{Scanning Engines:} examine the content, authenticate uses, and identify applications.
-\item \textbf{Delivery Mechanisms:} introduce scanning elements into the network, such as a module in switch or router, an image of Cisco security cloud
-\item \textbf{Security Intelligence Operations (SIO):} distinguish good traffic from malicious traffic
-\item \textbf{Policy Management Consoles:} span a single policy definition to multiple enforcement points; separated from the scanners
-\item \textbf{Next-Generation Endpoints:} ties all everything together
-\end{itemize}
-
-A \textbf{context-aware scanning element} is a network security device that examines packets on the wire, but also looks at external information to understand the full context of the situation. A context-aware policy uses a simplified descriptive business language to define security policies based on five parameters: person ID, application, device type, location, and access time.\\
-
-To help keep the Cisco ESA, WSA, ASA, and IPS devices secure, Cisco designed the \textbf{Security Intelligence Operations (SIO)}. The SIO is a Cloud-based service that connects global threat information, reputation-based services, and sophisticated analysis, to Cisco network security devices.
-
 \subsection{Mitigating common network attacks}
 
 \paragraph{Malware:} The primary means of mitigating virus and Trojan horse attacks is antivirus software. Antivirus software are host-based product that prevents hosts from getting infected and spreading malicious code. However, they do not prevent viruses from entering the network.
 
-\paragraph{Worms:} They are more network-based than viruses. Worm mitigation requires diligence and coordination on the part of network security professionals. The response to a worm attack can be broken down into four phases:
+\paragraph{Worms:} They are more network-based than viruses. The response to a worm attack can be broken down into four phases:
 
 \begin{enumerate}
 \item \textbf{\textbf{Containment}:} limit the spread of worm infection
@@ -196,31 +188,34 @@ To help keep the Cisco ESA, WSA, ASA, and IPS devices secure, Cisco designed the
 \item \textbf{Treatment:} disinfect the infected systems
 \end{enumerate}
 
-\paragraph{Reconnaissance:} We can detect Reconnaissance attacks and generate an alarm using \emph{Anti-sniffer} software and hardware tools, Cisco ASA, Cisco ISR. \emph{Encryption} is an effective solution for sniffer attacks. Using \emph{IPS} and \emph{firewall} can limit the impact of \emph{port scanning}. \emph{Ping sweeps} can be stopped if \emph{ICMP} echo and echo-reply are turned off on edge routers. 
+\paragraph{Reconnaissance:} \emph{Encryption} is an effective solution for sniffer attacks. Using \emph{IPS} and \emph{firewall} can limit the impact of \emph{port scanning}. \emph{Ping sweeps} can be stopped if \emph{ICMP} echo and echo-reply are turned off on edge routers. 
 
-\paragraph{Access attacks:} In general, access attacks can be detected by reviewing logs, bandwidth utilization, and process loads. The use of encrypted or hashed authentication protocols, along with a strong password policy, greatly reduces the probability of successful access attacks. Educate employees about the risks of social engineering, and develop strategies to validate identities.
+\paragraph{Access attacks:} The network should be designed using the principle of minimum trust. This means that systems should not use one another unnecessarily. Other options are valid network security access protections (encrypted or hashed authentication protocols) but do not relate to the principle of minimum trust.
 
-\paragraph{DoS attacks:} One of the first signs of a DoS attack is a large number of user complaints about unavailable resources. To minimize the number of attacks, a network utilization software package should be running at all times. 
+\paragraph{DoS attacks:} One of the first signs of a DoS attack is a large number of user complaints about unavailable resources. To minimize the number of attacks, a network utilization software and anti-spoofing technologies (port security, DHCP snooping, IP source guard, ARP inspection, and ACL) should be running at all times. 
+
+\subsection{Cisco SecureX architecture}
+
+The Cisco SecureX architecture is designed to provide effective security for any user, using any device, from any location, and at any time. This architecture includes the five major components: Scanning Engines, Delivery Mechanisms, Security Intelligence Operations (SIO), Policy Management Consoles, and Next-Generation Endpoints. The most important component of SecureX is SIO, which detects and blocks malicious traffic.\\
+
+The SecureX is a huge and complex computing model. Therefore, a \textbf{context-aware scanning element} is used to scale SecureX. It is a device that examines packets as well as external information to understand the full context of the situation. To be accurate, this context-aware device defines security policies based on five parameters: person ID, application, device type, location, and access time.\\
+
+\textbf{Security Intelligence Operations (SIO)} is a Cloud-based service that connects global threat information, reputation-based services, and sophisticated analysis, to SecureX network security devices.
 
 \subsection{Cisco Network Foundation Protection Framework}
 
 The Cisco Network Foundation Protection (NFP) framework provides comprehensive guidelines for protecting the network infrastructure.  NFP logically divides routers and switches into three functional areas: Control plane, Management plane, and Data plane.\\
 
-\textbf{Control plane} security can be implemented using the following features: \emph{Routing protocol authentication}, \emph{CoPP}, and \emph{AutoSecure}. CoPP (Control Plane Policing) prevents unnecessary traffic from overwhelming the route processor. AutoSecure can lock down the management plane functions and the forwarding plane services and functions of a router.\\
-
-\textbf{Management plane} security can be implemented using the following features:
-
 \begin{itemize}
-\item Login and password policy
-\item Present legal notification
-\item \textbf{RBAC} (Role-based access control)  restricts user access based on the role of the user. In Cisco IOS, the role-based CLI access feature implements RBAC for router management access. 
-\item Authorize actions
-\item Enable management access reporting
-\end{itemize}
 
-\textbf{Data plane} security can be implemented using \emph{ACLs}, \emph{antispoofing mechanisms}, and \emph{Layer 2 security} features. 
+\item\textbf{Control plane} is responsible for routing functions. Its security is implemented by Routing protocol authentication, CoPP, and AutoSecure. CoPP (Control Plane Policing) prevents unnecessary traffic from overwhelming the route processor. \textbf{AutoSecure} can lock down the management plane functions and the forwarding plane services and functions of a router.\\
 
-\begin{itemize}
-\item ACLs are used to secure the data plane in a variety of ways: Blocking unwanted traffic or users, Reducing the chance of DoS attacks, Mitigating spoofing attacks, Providing bandwidth control, Classifying traffic to protect the Management and Control planes.
-\item Layer 2 security tools are integrated into the Cisco Catalyst switches: Port security, DHCP snooping, Dynamic ARP Inspection (DAI), and IP Source Guard.
+\item\textbf{Management plane} is responsible for network security and management. Its security is implemented by password policy, RBAC\footnote{Role-based access control  restricts user access based on the role of the user. In Cisco IOS, the role-based CLI access feature implements RBAC for router management access.}, authorization, access reporting.
+
+\item\textbf{Data plane} (Forwarding plane) is responsible for forwarding data. Its security can be implemented using \emph{ACLs}, \emph{antispoofing mechanisms}, and \emph{Layer 2 security} features. 
+
 \end{itemize}
+%\begin{itemize}
+%\item ACLs are used to secure the data plane in a variety of ways: Blocking unwanted traffic or users, Reducing the chance of DoS attacks, Mitigating spoofing attacks, Providing bandwidth control, Classifying traffic to protect the Management and Control planes.
+%\item Layer 2 security tools are integrated into the Cisco Catalyst switches: Port security, DHCP snooping, Dynamic ARP Inspection (DAI), and IP Source Guard.
+%\end{itemize}
